--- a/src/PsnStickers/appsettings.json
+++ b/src/PsnStickers/appsettings.json
@@ -1,7 +1,10 @@
-﻿{
+{
   "Data": {
     "DefaultConnection": {
       "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=aspnet5-WebApplication1-d4986de3-470d-4228-9a7e-bf16fe0d24c8;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "cc4bde57-b61c-4bcf-a56f-f318d26d8c31"
   }
 }
